# CSU_card_read

./: .gitignore  README.md  config.ini  data.js  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: push.yaml
